--- a/html/first_frame/dailymusic_body.html
+++ b/html/first_frame/dailymusic_body.html
@@ -183,10 +183,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -216,10 +216,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -232,11 +232,12 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool05.png" alt=""></div>
 		<div class="num">专辑</div>
 	</div>
-</div><div class="egret-flex-item musiclist-item">
+</div>
+<div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf pl10">
-			<div class="egret-flex-item-shelf01">我知道你都知道</div>
-			<div class="egret-flex-item-shelf02">薛之谦 - 几个薛之谦</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(2, this)">
@@ -248,10 +249,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -268,8 +269,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf pl10">
-			<div class="egret-flex-item-shelf01">走过的路</div>
-			<div class="egret-flex-item-shelf02">蔡健雅 - Goodbye &amp; Hello</div>
+			<div class="egret-flex-item-shelf01">暖风</div>
+			<div class="egret-flex-item-shelf02">周传雄 - 说不出有多爱</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(3, this)">
@@ -281,10 +282,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -301,8 +302,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf pl10">
-			<div class="egret-flex-item-shelf01">恋着多喜欢</div>
-			<div class="egret-flex-item-shelf02">梁静茹 - 恋着多喜欢 EP</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(4, this)">
@@ -314,10 +315,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -334,8 +335,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf pl10">
-			<div class="egret-flex-item-shelf01">回到最初</div>
-			<div class="egret-flex-item-shelf02">蔡淳佳 - 回到最初</div>
+			<div class="egret-flex-item-shelf01">暖风</div>
+			<div class="egret-flex-item-shelf02">周传雄 - 说不出有多爱</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(5, this)">
@@ -347,10 +348,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -367,8 +368,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf pl10">
-			<div class="egret-flex-item-shelf01">想对你说</div>
-			<div class="egret-flex-item-shelf02">杨宗纬 - 初·爱</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(6, this)">
@@ -380,10 +381,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -400,8 +401,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf pl10">
-			<div class="egret-flex-item-shelf01">乘风</div>
-			<div class="egret-flex-item-shelf02">王蓝茵 - 想飞 电视原声带</div>
+			<div class="egret-flex-item-shelf01">暖风</div>
+			<div class="egret-flex-item-shelf02">周传雄 - 说不出有多爱</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(7, this)">
@@ -413,10 +414,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -433,8 +434,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf pl10">
-			<div class="egret-flex-item-shelf01">情书</div>
-			<div class="egret-flex-item-shelf02">张学友 - 友情歌 1995-2000世纪情歌金选</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(8, this)">
@@ -446,10 +447,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -466,8 +467,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf pl10">
-			<div class="egret-flex-item-shelf01">手套</div>
-			<div class="egret-flex-item-shelf02">李泉 - 心世界</div>
+			<div class="egret-flex-item-shelf01">暖风</div>
+			<div class="egret-flex-item-shelf02">周传雄 - 说不出有多爱</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(9, this)">
@@ -479,10 +480,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -496,6 +497,7 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="num">专辑</div>
 	</div>
 </div>
+
 </body>
 <script type="text/javascript" src="../../script/api.js"></script>
 <script type="text/javascript">
@@ -519,7 +521,7 @@ function collectmusic (clicktoolitem) {
 function openMusicPlay () {
 	api.openWin({
 		name: 'musicplay',
-		url: './musicplay.html',
+		url: '../musicplay.html',
 		delay:200
 	});
 }
@@ -527,7 +529,7 @@ function openMusicPlay () {
 function openMusiclistshare () {
 	api.openFrame({
 		name: 'musiclistshare',
-		url: './musiclist_share.html',
+		url: '../musiclist_share.html',
 		delay:300,
 		rect: {
 			x: 0,
@@ -538,33 +540,33 @@ function openMusiclistshare () {
 	});
 }
 
-function downloadAll () {
-	api.confirm({
-		title: '下载',
-		msg: '下载本歌单全部音乐？',
-		buttons:["确定", "取消"]
-		},function(ret,err){
-		if(ret.buttonIndex == 1){
-			
-		}
-		else{	
-		}
-	});
-}
+// function downloadAll () {
+// 	api.confirm({
+// 		title: '下载',
+// 		msg: '下载本歌单全部音乐？',
+// 		buttons:["确定", "取消"]
+// 		},function(ret,err){
+// 		if(ret.buttonIndex == 1){
+//
+// 		}
+// 		else{
+// 		}
+// 	});
+// }
 
-function downloadMusic () {
-	api.confirm({
-		title: '下载',
-		msg: '下载本首歌？',
-		buttons:["确定", "取消"]
-		},function(ret,err){
-		if(ret.buttonIndex == 1){	
-		}
-		else{	
-		}
-	});
-
-}
+// function downloadMusic () {
+// 	api.confirm({
+// 		title: '下载',
+// 		msg: '下载本首歌？',
+// 		buttons:["确定", "取消"]
+// 		},function(ret,err){
+// 		if(ret.buttonIndex == 1){
+// 		}
+// 		else{
+// 		}
+// 	});
+//
+// }
 
 function expandlist (index, clickitem) {
 	var toolbarlist = document.getElementsByClassName('musiclist-item-tool');
