--- a/html/first_frame/frame0101_chinese.html
+++ b/html/first_frame/frame0101_chinese.html
@@ -191,10 +191,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -224,10 +224,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -256,10 +256,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -289,10 +289,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -322,10 +322,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -355,10 +355,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -388,10 +388,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -421,10 +421,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -454,10 +454,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -487,10 +487,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -546,33 +546,33 @@ function openMusiclistshare () {
 	});
 }
 
-function downloadAll () {
-	api.confirm({
-		title: '下载',
-		msg: '下载本歌单全部音乐？',
-		buttons:["确定", "取消"]
-		},function(ret,err){
-		if(ret.buttonIndex == 1){
-			
-		}
-		else{	
-		}
-	});
-}
-
-function downloadMusic () {
-	api.confirm({
-		title: '下载',
-		msg: '下载本首歌？',
-		buttons:["确定", "取消"]
-		},function(ret,err){
-		if(ret.buttonIndex == 1){	
-		}
-		else{	
-		}
-	});
-
-}
+// function downloadAll () {
+// 	api.confirm({
+// 		title: '下载',
+// 		msg: '下载本歌单全部音乐？',
+// 		buttons:["确定", "取消"]
+// 		},function(ret,err){
+// 		if(ret.buttonIndex == 1){
+//
+// 		}
+// 		else{
+// 		}
+// 	});
+// }
+//
+// function downloadMusic () {
+// 	api.confirm({
+// 		title: '下载',
+// 		msg: '下载本首歌？',
+// 		buttons:["确定", "取消"]
+// 		},function(ret,err){
+// 		if(ret.buttonIndex == 1){
+// 		}
+// 		else{
+// 		}
+// 	});
+//
+// }
 
 function expandlist (index, clickitem) {
 	var toolbarlist = document.getElementsByClassName('musiclist-item-tool');
