--- a/html/forth_frame/setting_body.html
+++ b/html/forth_frame/setting_body.html
@@ -116,47 +116,47 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item mt10 bt" tapmode="fmbtnhover" onclick="">
 	<div class="egret-flex-item-shelf">
 		<div class="egret-flex-item-shelf01">在线播放音质</div>
-		
+
 	</div>
 	<div class="egret-flex-item-arrow">
 		<img src="../../image/cm2_list_icn_arr.png" alt="" class="">
 	</div>
 </div>
-<div class="egret-flex-item" tapmode="fmbtnhover" onclick="">
-	<div class="egret-flex-item-shelf">
+<!-- <div class="egret-flex-item" tapmode="fmbtnhover" onclick=""> -->
+	<!-- <div class="egret-flex-item-shelf">
 		<div class="egret-flex-item-shelf01">下载音质</div>
-		
-	</div>
-	<div class="egret-flex-item-arrow">
+
+	</div> -->
+	<!-- <div class="egret-flex-item-arrow">
 		<img src="../../image/cm2_list_icn_arr.png" alt="" class="">
 	</div>
-</div>
+</div> -->
 
 <!-- 2 -->
 <div class="egret-flex-item mt10 bt" tapmode="fmbtnhover" onclick="">
 	<div class="egret-flex-item-shelf">
 		<div class="egret-flex-item-shelf01">使用2G/3G/4G网络播放</div>
-		
+
 	</div>
 	<div class="egret-flex-item-arrow">
 		<!-- <img src="../../image/cm2_list_icn_arr.png" alt="" class=""> -->
 	</div>
 </div>
-<div class="egret-flex-item" tapmode="fmbtnhover" onclick="">
+<!-- <div class="egret-flex-item" tapmode="fmbtnhover" onclick="">
 	<div class="egret-flex-item-shelf">
 		<div class="egret-flex-item-shelf01">使用2G/3G/4G网络下载</div>
-		
+
 	</div>
-	<div class="egret-flex-item-arrow">
+	<div class="egret-flex-item-arrow"> -->
 		<!-- <img src="../../image/cm2_list_icn_arr.png" alt="" class=""> -->
-	</div>
-</div>
+	<!-- </div>
+</div> -->
 
 <!-- 3 -->
 <div class="egret-flex-item mt10 bt" tapmode="fmbtnhover" onclick="">
 	<div class="egret-flex-item-shelf">
 		<div class="egret-flex-item-shelf01">锁屏歌词</div>
-		
+
 	</div>
 	<div class="egret-flex-item-arrow">
 		<!-- <img src="../../image/cm2_list_icn_arr.png" alt="" class=""> -->
@@ -165,7 +165,7 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item" tapmode="fmbtnhover" onclick="">
 	<div class="egret-flex-item-shelf">
 		<div class="egret-flex-item-shelf01">歌词翻译</div>
-		
+
 	</div>
 	<div class="egret-flex-item-arrow">
 		<!-- <img src="../../image/cm2_list_icn_arr.png" alt="" class=""> -->
@@ -176,7 +176,7 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <div class="egret-flex-item mt10 bt" tapmode="fmbtnhover" onclick="">
 	<div class="egret-flex-item-shelf">
 		<div class="egret-flex-item-shelf01">清除缓存</div>
-		
+
 	</div>
 	<div class="egret-flex-item-arrow">
 		<img src="../../image/cm2_list_icn_arr.png" alt="" class="">
