--- a/html/musiclist_body.html
+++ b/html/musiclist_body.html
@@ -98,7 +98,7 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 .musiclistprofile .egret-flex-item-shelf .egret-flex-item-shelf02 .createrlogo {width: 2em;}
 .musiclistprofile .egret-flex-item-shelf .egret-flex-item-shelf02 .creatername {margin: 0 1em;}
 .userinfo {display: -webkit-box;background-color: #fff;/*padding: 10px 0;*/}
-.userinfo .userinfocol {/*-webkit-box-flex:1;*/padding: 10px 0;text-align: center;width: 25%;box-sizing: border-box;}
+.userinfo .userinfocol {-webkit-box-flex:1;padding: 10px 0;text-align: center;width: 25%;box-sizing: border-box;}
 .userinfo .userinfocol .info {font-size: 0.8em;color: #999;}
 .userinfo .userinfocol .info img {width: 2em;}
 .userinfo .userinfocol .num {padding-top: 5px;}
@@ -164,10 +164,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclistshare.png" alt=""></div>
 		<div class="num">2</div>
 	</div>
-	<div class="userinfocol03 userinfocol" tapmode="toolhover" onclick="downloadAll()">
+	<!-- <div class="userinfocol03 userinfocol" tapmode="toolhover" onclick="downloadAll()">
 		<div class="info"><img src="../image/musiclist/musiclistdown.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 </div>
 
 <!-- 2 播放全部 -->
@@ -203,10 +203,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -226,8 +226,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">暖风</div>
-			<div class="egret-flex-item-shelf02">周传雄 - 说不出有多爱</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(1, this)">
@@ -239,10 +239,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -255,14 +255,15 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool05.png" alt=""></div>
 		<div class="num">专辑</div>
 	</div>
-</div><div class="egret-flex-item musiclist-item">
+</div>
+<div class="egret-flex-item musiclist-item">
 	<div class="egret-flex-item-logo">
 		3
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">我知道你都知道</div>
-			<div class="egret-flex-item-shelf02">薛之谦 - 几个薛之谦</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(2, this)">
@@ -274,10 +275,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -297,8 +298,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">走过的路</div>
-			<div class="egret-flex-item-shelf02">蔡健雅 - Goodbye &amp; Hello</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(3, this)">
@@ -310,10 +311,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -333,8 +334,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">恋着多喜欢</div>
-			<div class="egret-flex-item-shelf02">梁静茹 - 恋着多喜欢 EP</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(4, this)">
@@ -346,10 +347,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -369,8 +370,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">回到最初</div>
-			<div class="egret-flex-item-shelf02">蔡淳佳 - 回到最初</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(5, this)">
@@ -382,10 +383,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -405,8 +406,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">想对你说</div>
-			<div class="egret-flex-item-shelf02">杨宗纬 - 初·爱</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(6, this)">
@@ -418,10 +419,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -441,8 +442,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">乘风</div>
-			<div class="egret-flex-item-shelf02">王蓝茵 - 想飞 电视原声带</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(7, this)">
@@ -454,10 +455,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -477,8 +478,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">情书</div>
-			<div class="egret-flex-item-shelf02">张学友 - 友情歌 1995-2000世纪情歌金选</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(8, this)">
@@ -490,10 +491,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -513,8 +514,8 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 	</div>
 	<div class="egret-flex-item-abright">
 		<div class="egret-flex-item-shelf">
-			<div class="egret-flex-item-shelf01">手套</div>
-			<div class="egret-flex-item-shelf02">李泉 - 心世界</div>
+			<div class="egret-flex-item-shelf01">怕寂寞</div>
+			<div class="egret-flex-item-shelf02">雁卿 - Magic</div>
 		</div>
 		<div class="egret-flex-item-arrow">
 			<img src="../image/musiclist/musiclistmore.png" alt="" class="toobarimg" onclick="expandlist(9, this)">
@@ -526,10 +527,10 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 		<div class="info"><img src="../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -574,7 +575,7 @@ function openMusicPlay () {
 function openMusiclistshare () {
 	api.openFrame({
 		name: 'musiclistshare',
-		url: './musiclist_share.html',
+		url: 'musiclist_share.html',
 		delay:300,
 		rect: {
 			x: 0,
@@ -585,33 +586,33 @@ function openMusiclistshare () {
 	});
 }
 
-function downloadAll () {
-	api.confirm({
-		title: '下载',
-		msg: '下载本歌单全部音乐？',
-		buttons:["确定", "取消"]
-		},function(ret,err){
-		if(ret.buttonIndex == 1){
-			
-		}
-		else{	
-		}
-	});
-}
-
-function downloadMusic () {
-	api.confirm({
-		title: '下载',
-		msg: '下载本首歌？',
-		buttons:["确定", "取消"]
-		},function(ret,err){
-		if(ret.buttonIndex == 1){	
-		}
-		else{	
-		}
-	});
-
-}
+// function downloadAll () {
+// 	api.confirm({
+// 		title: '下载',
+// 		msg: '下载本歌单全部音乐？',
+// 		buttons:["确定", "取消"]
+// 		},function(ret,err){
+// 		if(ret.buttonIndex == 1){
+//
+// 		}
+// 		else{
+// 		}
+// 	});
+// }
+//
+// function downloadMusic () {
+// 	api.confirm({
+// 		title: '下载',
+// 		msg: '下载本首歌？',
+// 		buttons:["确定", "取消"]
+// 		},function(ret,err){
+// 		if(ret.buttonIndex == 1){
+// 		}
+// 		else{
+// 		}
+// 	});
+//
+// }
 
 function expandlist (index, clickitem) {
 	var toolbarlist = document.getElementsByClassName('musiclist-item-tool');
