--- a/html/second_frame/frame02_music.html
+++ b/html/second_frame/frame02_music.html
@@ -150,7 +150,7 @@ html,body {min-height: 100%;background-color: #f3f3f3;height: 100%;}
 <body>
 <div class="searchbar">
 	<div class="guncotton">
-		
+
 		<input type="text" placeholder="搜索下载歌曲">
 	</div>
 </div>
@@ -181,10 +181,10 @@ html,body {min-height: 100%;background-color: #f3f3f3;height: 100%;}
 		<div class="info"><img src="../../image/musiclist/musiclisttool01.png" alt=""></div>
 		<div class="num">收藏</div>
 	</div>
-	<div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
+	<!-- <div class="userinfocol" tapmode="toolhover" onclick="downloadMusic()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool02.png" alt=""></div>
 		<div class="num">下载</div>
-	</div>
+	</div> -->
 	<div class="userinfocol" tapmode="toolhover" onclick="openMusiclistshare()">
 		<div class="info"><img src="../../image/musiclist/musiclisttool03.png" alt=""></div>
 		<div class="num">分享</div>
@@ -248,9 +248,9 @@ function downloadAll () {
 		buttons:["确定", "取消"]
 		},function(ret,err){
 		if(ret.buttonIndex == 1){
-			
+
 		}
-		else{	
+		else{
 		}
 	});
 }
@@ -261,9 +261,9 @@ function downloadMusic () {
 		msg: '下载本首歌？',
 		buttons:["确定", "取消"]
 		},function(ret,err){
-		if(ret.buttonIndex == 1){	
+		if(ret.buttonIndex == 1){
 		}
-		else{	
+		else{
 		}
 	});
 
