--- a/html/second_frame/second_frame_body.html
+++ b/html/second_frame/second_frame_body.html
@@ -87,17 +87,17 @@ html,body {min-height: 100%;background-color: #f9f9f9;}
 <body>
 
 <!-- 1 推荐 -->
-<div class="egret-flex-item" tapmode="fmbtnhover" onclick="opendownload()">
-	<div class="egret-flex-item-logo">
+<!-- <div class="egret-flex-item" tapmode="fmbtnhover" onclick="opendownload()"> -->
+	<!-- <div class="egret-flex-item-logo">
 		<img src="../../image/frame02cover/frame02cover01.png" alt="" class="">
-	</div>
-	<div class="egret-flex-item-shelf">
+	</div> -->
+	<!-- <div class="egret-flex-item-shelf">
 		<div class="egret-flex-item-shelf01">下载国学</div>
 	</div>
 	<div class="egret-flex-item-arrow">
 		<img src="../../image/cm2_list_icn_arr.png" alt="" class="">
-	</div>
-</div>
+	</div> -->
+<!-- </div> -->
 <div class="egret-flex-item" tapmode="fmbtnhover" onclick="openrescent()">
 	<div class="egret-flex-item-logo">
 		<img src="../../image/frame02cover/frame02cover02.png" alt="" class="">
