--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
-    <title>注册Frame</title>
+    <title>登录</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
     <style>
     body{
@@ -118,34 +118,15 @@
         </div>
       </div>
   </div>
-
 </body>
-<script type="text/javascript" src="../script/api.js"></script>
-<script type="text/javascript" src="../script/APICloud-rest.js"></script>
-<script type="text/javascript" src="../script/SHA1.js"></script>
+<script type="text/javascript" src="./script/api.js"></script>
+<script type="text/javascript" src="./script/APICloud-rest.js"></script>
+<script type="text/javascript" src="./script/SHA1.js"></script>
 <script type="text/javascript">
-apiready = function() {
-    // fnInitUIInput();
-    // 侧滑边
-    api.openSlidLayout({
-        type: 'left',
-        leftEdge: 60,
-        fixedPane: {
-            name: 'fixed',
-            url: 'html/fixed.html'
-        },
-        slidPane: {
-            name: 'slide',
-            url: 'index.html'
-        }
-    }, function (ret) {
-        alert("131235");
-    });
+apiready = function() {};
 
-};
-function sliding() {
-    api.openSlidPane({type: 'left'});
-}
+
+
 function fnOpenIndexWin(){
   api.openWin({
       name: 'index',
