--- a/index1.html
+++ b/index1.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0">
         <title></title>
-        <link rel="stylesheet" type="text/css" href="api.css" />
-        <link rel="stylesheet" type="text/css" href="common.css" />
+        <link rel="stylesheet" type="text/css" href="./api.css" />
+        <link rel="stylesheet" type="text/css" href="./common.css" />
         <style>
             /*slide*/
             html,body{
